# Static-Table-Based-Scheduler

./: README.md
STBS/: CMakeLists.txt  prj.conf
STBS/lib/: fifo.h  linked_list.h  stbs.h  tasks.h
STBS/src/: fifo.c  main.c  stbs.c  tasks.c
